<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Punjabi Pro</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Family Members</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_months">Weekdays</string>

    <string name="category_family">Colors</string>
    <string name="category_grammar">Grammar</string>
    <string name="category_vocabulary">Vocabulary</string>
</resources>